# identificadordeabelha

./: .env.example  .gitignore  README.md  deploy-backend.sh  docker-compose.oracle.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.docker.txt  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 20260417_0001_initial_schema.py  20260427_0002_add_global_identifications.py  20260427_0003_add_user_feedback.py  20260508_0004_add_display_name_to_model_versions.py
backend/scripts/: download_gbif_demo_dataset.py  init_db.py  oci_sync.py  run_training_pipeline.py  seed_species.py  setup_oci_vm.sh  setup_oracle_arm_vm.sh
backend/src/augochloropsis_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/augochloropsis_ai/api/: main.py
backend/src/augochloropsis_ai/api/routes/: global_identifications.py  health.py  history.py  (+3 more)
backend/src/augochloropsis_ai/core/: config.py
backend/src/augochloropsis_ai/db/: models.py  session.py
backend/src/augochloropsis_ai/ml/: artifact_loader.py  embedder.py  global_identifier.py  inference_pipeline.py  preprocessing.py
backend/src/augochloropsis_ai/repositories/: global_identification_repository.py  model_repository.py  prediction_repository.py  species_repository.py
backend/src/augochloropsis_ai/schemas/: global_identification.py  history.py  model.py  prediction.py
backend/src/augochloropsis_ai/services/: global_identification_service.py  history_service.py  prediction_service.py  species_service.py  storage_service.py
backend/src/augochloropsis_ai/training/: build_manifest.py  evaluate_model.py  extract_embeddings.py  split_dataset.py  train_mlp.py
backend/src/beeai/api/: deps.py  main.py
backend/src/beeai/core/: config.py  exceptions.py  logging.py
backend/src/beeai/db/: models.py  session.py
backend/src/beeai/ml/: artifact_loader.py  classifier.py  embedder.py  global_identifier.py  inference_pipeline.py  preprocessing.py
backend/src/beeai/repositories/: global_identification_repository.py  model_repository.py  prediction_repository.py  species_repository.py
backend/src/beeai/schemas/: global_identification.py  species.py
backend/src/beeai/services/: global_identification_service.py  history_service.py  oci_object_storage.py  prediction_service.py  species_service.py  storage_service.py
backend/src/beeai/training/: evaluate_model.py  extract_embeddings.py  package_model.py  train_mlp.py
backend/tests/: conftest.py
backend/tests/api/: test_history.py  test_predictions.py  test_species.py
backend/tests/ml/: test_artifact_loader.py  test_inference_pipeline.py  test_preprocessing.py
backend/tests/training/: test_split_dataset.py
(+72 files in other folders)
