[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beeai"
version = "0.1.0"
description = "BeeAI – sistema de visao computacional para classificacao de especies de abelhas."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<2.0",
  "fastapi>=0.115,<1.0",
  "matplotlib>=3.9,<4.0",
  "numpy>=1.26,<3.0",
  "pandas>=2.2,<3.0",
  "pillow>=10,<12",
  "psycopg2-binary>=2.9,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "PyJWT>=2.8,<3.0",
  "PyYAML>=6.0,<7.0",
  "python-multipart>=0.0.9,<1.0",
  "safetensors>=0.4,<1.0",
  "scikit-learn>=1.5,<2.0",
  "seaborn>=0.13,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "torch>=2.4,<3.0",
  "torchvision>=0.19,<1.0",
  "transformers>=4.56,<5.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
bioclip = [
  "open_clip_torch>=2.24,<3.0",
]
dev = [
  "httpx>=0.27,<1.0",
  "mypy>=1.11,<2.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "ruff>=0.6,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
check_untyped_defs = true
plugins = []
